--- a/css/resp.css
+++ b/css/resp.css
@@ -55,7 +55,8 @@
         padding-top: 25px;
     }
     .card-abt{
-        padding:5%;
+        padding:8%;
+        padding-bottom:10% ;
         margin: auto;
         padding-top: 10%;
     }
