--- a/css/Style.css
+++ b/css/Style.css
@@ -106,7 +106,7 @@ section .row{
 }
 i{
     z-index: 0;
-    color: rgb(0, 0, 0, 0.5);
+    color: rgba(109, 102, 102, 0.5);
     transition: 1s;
     padding: 0 5px;
     user-select: none;
@@ -342,7 +342,7 @@ font-family: 'Ubuntu', sans-serif;
     
     margin-top: -200px;
     color: white;
-    box-shadow: 0 0 25px 0 rgba(160, 168, 200, 0.253)!important;
+    box-shadow: 0 0 25px 0 rgba(160, 168, 200, 0.712)!important;
 
 }
 
