--- a/css/Style.css
+++ b/css/Style.css
@@ -355,7 +355,8 @@ font-family: 'Ubuntu', sans-serif;
     max-height: 275px;
     margin-bottom: 15px;
     object-fit: contain;
-    border-radius: 25%;
+    border-radius: 30%;
+  
 }
 .btnabt{
    justify-content: center;
@@ -407,20 +408,23 @@ section1{
     margin: 10px;
     padding: 20px;
     margin-top: 40px;
-  
-    
     width: 22% !important;
     height: 400px !important;
     min-width: 100px;
-  
     box-shadow: 0 0 25px 0 rgba(123, 231, 61, 0.856)!important;
-    
+    background-image: linear-gradient(-45deg, #000000 0%, rgba(38 79 38 / 65%) 50%);
+}
+
+.card-abt:hover{
+    background-image: linear-gradient(-45deg, #000000 0%, rgba(174, 179, 174, 0.226) 50%);
+    box-shadow: 0 0 25px 0 rgba(182, 187, 179, 0.726)!important;;
 }
 .card-abt h1{
     margin-bottom: 5px;
     color: #0f0;
 
 }
+
 .card-abt p{
     color: white;
     font-size: 40px;
@@ -443,10 +447,14 @@ section1{
 }
 .abt-link{
     padding: 5px;
-    background-color: #0f0;
+    background:linear-gradient(-45deg, #fbfafa96 0%, rgba(5, 255, 5, 0.445) 50%);
+    border: 2px solid grey;
     border-radius: 15px;
     text-decoration: none;
     color: #111;
+}
+.abt-link:hover{
+  background: linear-gradient(-45deg, #f6f1f1 0%, rgba(174, 179, 174, 0.226) 50%);
 }
 .content-section{
     display: flex;
